--- a/index.html
+++ b/index.html
@@ -86,12 +86,12 @@
     <section class="services" id="services">
         <div class="container">
             <div class="row text-center">
-                <div class="col">
+                <div class="col-12">
                 <h1>Our Services</h1>
                 </div>
             </div>
             <div class="row boxes">
-                <div class="col-sm-4 col-md"id="custom">
+                <div class="col-sm-4 col-md" id="custom">
                     <div class="card">
                     <div class="card-body">
                         <div class="icon"><i class="fa fa-cog fa-3x"></i></div>
